@@ -39,6 +39,8 @@ $listDirn	= $this->state->get('list.direction');
 			<?php echo JText::_('JGLOBAL_DISPLAY_NUM'); ?>&#160;
 			<?php echo $this->pagination->getLimitBox(); ?>
 		</div>
+		<input type="hidden" name="filter_order" value="<?php echo $listOrder; ?>" />
+		<input type="hidden" name="filter_order_Dir" value="<?php echo $listDirn; ?>" />
 		</fieldset>
 	<?php endif; ?>
 
@@ -157,9 +159,5 @@ $listDirn	= $this->state->get('list.direction');
 				<?php echo $this->pagination->getPagesLinks(); ?>
 			</div>
 		<?php endif; ?>
-		<div>
-			<input type="hidden" name="filter_order" value="<?php echo $listOrder; ?>" />
-			<input type="hidden" name="filter_order_Dir" value="<?php echo $listDirn; ?>" />
-		</div>
 	</form>
 <?php endif; ?>
